# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-link-tracker"
version = "2.0.0"
description = "Enhanced Link Tracker API with analytics and bulk processing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "qrcode[pil]>=7.4.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-dir]
"." = "."

[tool.uvicorn]
app = "main:app"
host = "0.0.0.0"
port = 8000
