[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-link-tracker"
# version = "2.0.0"  # ここで直接バージョン指定
description = "Enhanced Link Tracker API with analytics and bulk processing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "qrcode[pil]>=7.4.0",
    "python-multipart>=0.0.6"
]

[tool.setuptools]
packages = ["."]
package-dir = {"" = "."}

# バージョンを動的に取得しないように明示
[tool.setuptools.dynamic]
version = {attr = "enhanced-link-tracker.__version__"}  # または削除
